# mbpol_openmm_plugin_old

./: CHANGELOG.md  CMakeLists.txt  CMakeLists_mbpol_plugin.patch  INSTALL.md  README.md  apply_CMakeLists_mbpol_plugin_patch.sh  mbpol_onlymultiple_onlywater.xml  run_mbpol_tests.sh
examples/: CMakeLists.txt  Simulate14WaterCluster.cpp
examples/Simulate14WaterCluster/: CMakeLists.txt  README.md  Simulate14WaterCluster.cpp
openmmapi/include/: OpenMMAmoeba.h  OpenMMMBPol.h
openmmapi/include/openmm/: AmoebaGeneralizedKirkwoodForce.h  AmoebaMultipoleForce.h  AmoebaStretchBendForce.h  AmoebaVdwForce.h  MBPolDispersionForce.h  MBPolElectrostaticsForce.h  MBPolOneBodyForce.h  MBPolThreeBodyForce.h  MBPolTwoBodyForce.h  amoebaKernels.h  mbpolKernels.h
openmmapi/include/openmm/internal/: AmoebaGeneralizedKirkwoodForceImpl.h  AmoebaVdwForceImpl.h  MBPolDispersionForceImpl.h  MBPolElectrostaticsForceImpl.h  MBPolOneBodyForceImpl.h  MBPolThreeBodyForceImpl.h  MBPolTwoBodyForceImpl.h  windowsExportMBPol.h
openmmapi/src/: AmoebaGeneralizedKirkwoodForce.cpp  AmoebaGeneralizedKirkwoodForceImpl.cpp  AmoebaMultipoleForce.cpp  AmoebaMultipoleForceImpl.cpp  AmoebaStretchBendForce.cpp  AmoebaVdwForce.cpp  AmoebaVdwForceImpl.cpp  MBPolDispersionForce.cpp  MBPolDispersionForceImpl.cpp  MBPolElectrostaticsForce.cpp  MBPolElectrostaticsForceImpl.cpp  MBPolOneBodyForce.cpp  MBPolOneBodyForceImpl.cpp  MBPolThreeBodyForceImpl.cpp  MBPolThreebodyForce.cpp  MBPolTwoBodyForce.cpp  MBPolTwoBodyForceImpl.cpp
python/: CMakeLists.txt  i-pi_results.ipynb  i-pi_results_beads.ipynb  mbpol.py  mbpol.xml  mbpolplugin.i  rpmd_results.ipynb  rpmd_results_beads.ipynb  setup.py  water14-rpmd-mbpol.ipynb  water14-rpmd-qtip4p-beads.ipynb  water14-rpmd-qtip4p.ipynb  water14-rpmd.ipynb  water14.ipynb  water14.py  water3.ipynb
serialization/: CMakeLists.txt
serialization/include/openmm/serialization/: AmoebaGeneralizedKirkwoodForceProxy.h  MBPolElectrostaticsForceProxy.h  MBPolOneBodyForceProxy.h  MBPolTwoBodyForceProxy.h
serialization/include/openmm/serialization/internal/: windowsExportMBPolSerialization.h
serialization/src/: AmoebaGeneralizedKirkwoodForceProxy.cpp  AmoebaMultipoleForceProxy.cpp  AmoebaSerializationProxyRegistration.cpp  AmoebaStretchBendForceProxy.cpp  AmoebaVdwForceProxy.cpp  MBPolElectrostaticsForceProxy.cpp  MBPolOneBodyForceProxy.cpp  MBPolSerializationProxyRegistration.cpp  MBPolTwoBodyForceProxy.cpp
serialization/tests/: CMakeLists.txt  TestSerializeAmoebaMultipoleForce.cpp  TestSerializeAmoebaStretchBendForce.cpp  TestSerializeAmoebaVdwForce.cpp  TestSerializeMBPolElectrostaticsForce.cpp  TestSerializeMBPolOneBodyForce.cpp  TestSerializeMBPolTwoBodyForce.cpp
wrappers/: CMakeLists.txt  CWrapper_Header.xslt  CWrapper_Source.xslt  FortranWrapper_Source.xslt
